# wormhole-web

./: .gitignore  Cargo.toml  Containerfile  Makefile  README.md  TODOS.md  docker-compose.yml  fly.toml  package-lock.json  package.json  playwright.config.ts  pyproject.toml
.claude/skills/: pre-release-e2e.md
.github/workflows/: deploy.yml  test.yml
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/wormhole-wasm/: Cargo.toml
crates/wormhole-wasm/src/: lib.rs
docs/: rust-rewrite-plan.md  rust-rewrite-spec.md
docs/superpowers/plans/: 2026-03-16-send-persistence.md  2026-03-16-streaming-send.md  2026-03-16-wormhole-web.md  2026-03-17-simplify-send-api.md
docs/superpowers/specs/: 2026-03-16-send-persistence-design.md  2026-03-16-streaming-send-design.md  2026-03-16-wormhole-web-design.md  2026-03-17-simplify-send-api-design.md  2026-03-17-web-ui-design.md
src/wormhole_web/: fly.py  sender.py  server.py  session.py  streaming.py  util.py
src/wormhole_web/static/: index.html  wasm-client.js
src/wormhole_web/static/wasm/: wormhole_wasm.js  wormhole_wasm_bg.wasm
static/: app.js  index.html  manifest.json  style.css  sw.js  wasm-client.js
static/wasm/: wormhole_wasm.js  wormhole_wasm_bg.wasm
tests/: conftest.py  test_e2e.py  test_fly.py  test_integration.py  test_receiver.py  test_sender.py  test_server.py  test_session.py  test_streaming.py  test_util.py
tests/e2e/: analytics-proxy.spec.ts  dark-mode.spec.ts  page-load.spec.ts  receive-flow.spec.ts  responsive.spec.ts  security-headers.spec.ts  send-flow.spec.ts  server-endpoints.spec.ts  service-worker.spec.ts  transit-ws.spec.ts  wasm-init.spec.ts  wasm-integrity.spec.ts
