[project]
name = "wormhole-web"
version = "0.1.0"
description = "HTTP gateway for Magic Wormhole"
requires-python = ">=3.12"
dependencies = [
    "magic-wormhole",
    "magic-wormhole-transit-relay",
    "twisted[tls]",
    "uhashring",
]

[project.scripts]
wormhole-web = "wormhole_web.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-twisted",
    "pytest-timeout",
    "treq",
]
